# pyo3-ffi-array-benchmark

./: Cargo.toml  README.md  bench.py  pyproject.toml
src/: lib.rs
