[package]
name = "pyo3_ffi_array_benchmark"
version = "0.1.0"
edition = "2024"

[lib]
name = "pyo3_ffi_array_benchmark"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "auto-initialize", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
